@@ -14,6 +14,7 @@ dgm-lib v2.2.0
 	* With the exception of `getRadialDifference`, all functions that work with angles by default work with degrees, but this can be changed to radians using a function template so it is optimized during compilation, like `dgm::Math::getRotated<dgm::Math::AngleType::Radians>(...)`
  * `dgm::DynamicBuffer` is now movable
  * `dgm::SpatialBuffer` is now movable
+ * `dgm::SpatialBuffe::getOverlapCandidates` is now `const`
 
 dgm-lib v2.1.2
  * Added `getUnitVector` math function
